# REDCapRecordSynthesizer

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  dbmi_synthesizer.html  dbmi_synthesizer.nickname_and_diminutive_names_lookup.html  example.py  genindex.html  index.html  modules.html  nicknames_example.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.doctrees/: dbmi_synthesizer.doctree  dbmi_synthesizer.nickname_and_diminutive_names_lookup.doctree  environment.pickle  index.doctree  modules.doctree
.github/actions/python-poetry-env/: action.yml
.github/pre-commit/: pylint_compute_score.sh  run_coverage.sh  run_documentation.sh  run_last_commit.sh  run_pylint.sh
.github/workflows/: test.yml
dbmi_synthesizer/: __init__.py  fake_records.py  state_abbr_conversion.py
dbmi_synthesizer/nickname_and_diminutive_names_lookup/: nicknames_example.py
docs/source/: conf.py  dbmi_synthesizer.nickname_and_diminutive_names_lookup.rst  dbmi_synthesizer.rst  index.rst  modules.rst
src/: __init__.py  setup.py
src/dbmi_synthesizer/: fake_records.py
src/dbmi_synthesizer/nickname_and_diminutive_names_lookup/: nicknames_example.py  python_parser.py
src/nickname_lookup/: nicknames_example.py
src/redcap_record_synthesizer/: __init__.py  fake_records.py  fake_records.pyi  state_abbr_conversion.py
src/redcap_record_synthesizer/nickname_and_diminutive_names_lookup/: __init__.py  nicknames_example.py  python_parser.py
src/redcap_record_synthesizer/nickname_lookup/: __init__.py  names.csv  nicknames_example.py  python_parser.py  python_parser.pyi
src/redcaprecordsynthesizer/: fake_records.py  fake_records.pyi  state_abbr_conversion.py  state_abbr_conversion.pyi
src/redcaprecordsynthesizer/nickname_lookup/: README.md  python_parser.py  python_parser.pyi
tests/: test_synthesizer.py
